--- a/second.html
+++ b/second.html
@@ -114,7 +114,7 @@
                             <h2><span>UNDANGAN </span>
                             </h2>
 
-                            <p class="text-white "> ACARA THREE POINT <br> MOJANG PARTY</p>
+                            <p class="text-white "> DECLARATION THREEPOINT <br> MOJANG PARTY</p>
                         </div>
 
                         <div class="img-profil text-center ">
