--- a/second.html
+++ b/second.html
@@ -118,7 +118,7 @@
                         </div>
 
                         <div class="img-profil text-center ">
-                            <img src="images/party.jpeg" class="w-75 mb-5 " alt=" ">
+                            <img src="images/deklarasi.jpeg" class="w-75 mb-5 " alt=" ">
 
                         </div>
 
